--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,7 +5,7 @@
   --acent-color: rgba(77, 90, 229, 1);
 }
 
-.body {
+body {
   font-family:"Roboto",sans-serif;
   color:#434455;
   background-color: white;
@@ -27,7 +27,7 @@
 }
 
 .logo {
-  font-family: "Raleway", sans-serif;
+  font-family:"Raleway",sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
