--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,7 +5,7 @@
   --acent-color: rgba(77, 90, 229, 1);
 }
 
-body {
+.body {
   font-family:"Roboto",sans-serif;
   color:#434455;
   background-color: white;
@@ -70,21 +70,26 @@ body {
 /* --Main part: First section --- */
 
 .heder {
-  font-weight: 700;
   font-size: 56px;
-  line-height: 1.1;
-  color: white;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color:#ffffff;
 }
-.order-but:focus,
-.order-but:hover {
-  background-color: rgba(64, 75, 191, 1);
-}
+
 .order-but {
-  background-color: var(--acent-color);
-  color: rgba(255, 255, 255, 1);
+  background-color: #4D5AE5;
+  font-family: "Roboto", sans-serif;
+  color:#ffffff;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.04em
+}
+.order-but:focus,
+.order-but:hover {
+    background-color: #404BBF;
+    cursor: pointer;
 }
 
 /* --Main part: Second section-- */
@@ -98,18 +103,20 @@ body {
 .section-subtitle {
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.1;
-  color: var(--main-color);
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color:#2e2f42;
 }
 
 .section-text {
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.1;
-  color: var(--second-color);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color:#434455;
 }
 .dark-bk {
-  background-color: var(--main-color);
+  background-color:#2e2f42;
 }
 .footer-text {
   font-weight: 400;
