--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: var(--acent-color);
 }
 .logo:hover,
@@ -96,7 +98,10 @@ body {
 .section-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.1;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+  letter-spacing: 0.02em;
   color: var(--main-color);
 }
 
