--- a/css/style.css
+++ b/css/style.css
@@ -148,11 +148,15 @@ body {
 /* Portfolio details */
 
 .filter {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-size: 26px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   color: var(--acent-color);
-  background-color: rgba(231, 233, 252, 1);
+  cursor: pointer;
+  background-color: #F4F4FD;
+  cursor: pointer;
 }
 
 .filter:hover,
